--- a/offre.html
+++ b/offre.html
@@ -1,3 +1,7 @@
- <script>
-      window.location.href = "http://vaulte.cam/";
+<script>
+var url= document.location;
+var str1=url.toString();
+var res = str1.split("#");
+var newurl="http://vaulte.cam"+res[1];
+window.location.href = newurl;
 </script>
